--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,10 @@
-#infi-list {
-  width: 200px;
-  height: 300px;
-  overflow: auto;
+#list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  margin: 30px;
-  padding: 20px;
-  border: 10px solid black;
-}
-li {
+#list li {
   padding: 10px;
-  list-style-type: none;
-}
-li:hover {
-  background: #ccc;
+  border-bottom: 1px solid #ccc;
 }
